<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ZeframActivity!</string>
    <string name="app_name">Zefram</string>
    <string name="search">Search</string>
    <string name="map_search_field_hint">Search or Address</string>
    <string name="open_helper_classname">com.viapx.zefram.lib.db.DatabaseHelper</string>
    <string name="menu_create_location">Add Location</string>
    <string name="location_name_field_hint">Location Name</string>
    <string name="location_label">Location</string>
    <string name="radius_label">Radius (in feet)</string>
    <string name="location_radius_field_prompt">Select radius in feet</string>
    <string name="events_label">Events</string>
    <string name="location_done_button_text">Done</string>
    <string name="location_cancel_button_text">Cancel</string>
    <string name="menu_delete_location">Delete Location</string>
    <string name="menu_add_location_event">Add Event</string>
    <string name="map_toggle_satellite">Toggle Satellite</string>
    <string name="location_event_when_occur_label">When should this event occur?</string>
    <string name="location_event_arriving_radio_label">Arriving</string>
    <string name="location_event_leaving_radio_label">Leaving</string>
    <string name="location_event_action_label">What should this event do?</string>
    <string name="location_event_action_spinner_prompt">Choose an action</string>
    <string name="location_event_action_custom_package_label">Service Package Name</string>
    <string name="location_event_action_custom_class_label">Service Class Name</string>
    <string name="location_event_action_custom_extra_label">Extra info to pass to service</string>
    <string name="location_event_action_package_hint">com.viapx.zefram</string>
    <string name="location_event_action_class_hint">com.viapx.zefram.service.WhateverService</string>
    <string name="location_event_action_custom_hint">Off</string>
    
    
</resources>