<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    >
    
    <!--  
        Production
            android:apiKey="0RmcvHWXJEDRMbSw0EfkJYSny7WrCkfH1fOgUNw"  -->

    <TableLayout 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:stretchColumns="0"
        android:layout_margin="0dip"
        >            

        <TableRow>
            <EditText
                android:id="@+id/map_search_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress" 
                android:hint="@string/map_search_field_hint"
                >
            </EditText>
            
            <Button 
                android:id="@+id/map_search_field_button" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                />
            
        </TableRow>
        
    </TableLayout>
    
    <FrameLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
        <com.google.android.maps.MapView
            android:id="@+id/mapview" 
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent"
            android:enabled="true"
            android:clickable="true"
            android:apiKey="0RmcvHWXJEDQsRzl6umJCrNRcBxfSUl-PZ6mVMw"
            android:layout_marginTop="-5dip"
            />
        
        <Button
            android:id="@+id/map_satellite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:layout_marginTop="5dip"
            android:layout_marginRight="5dip"
        
            android:padding="10dip"
        
            android:background="#beffffff"
            android:textColor="#ff707070"

            android:text="@string/map_toggle_satellite"
            />
    </FrameLayout>
</LinearLayout>